Added the main image of the project in html document

--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -10,18 +10,10 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Social links profile</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main>
+      <img src="/assets/images/avatar-jessica.jpeg" alt="" />
       <h2>Jessica Randall</h2>
 
       <p>London, United Kingdom</p>
