--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Social links profile</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Social links profile</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
-      <img src="/assets/images/avatar-jessica.jpeg" alt="" />
+    <main class="container">
+      <img src="/assets/images/avatar-jessica.jpeg" alt="Jessica" />
+
       <h2>Jessica Randall</h2>
 
-      <p>London, United Kingdom</p>
+      <h6>London, United Kingdom</h6>
 
       <p>"Front-end developer and avid reader."</p>
 
@@ -29,17 +31,19 @@
       </ul>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://github.com/dev-dimma/frontend-mentor-challenges/tree/main/social-links-profile-main/social-links-profile-main"
-        >Dimma Joel</a
-      >.
-    </div>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://github.com/dev-dimma/frontend-mentor-challenges/tree/main/social-links-profile-main/social-links-profile-main"
+          >Dimma Joel</a
+        >.
+      </p>
+    </footer>
   </body>
 </html>
