--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -12,15 +12,16 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <main class="container">
       <img src="/assets/images/avatar-jessica.jpeg" alt="Jessica" />
 
       <h2>Jessica Randall</h2>
 
-      <h6>London, United Kingdom</h6>
+      <p>London, United Kingdom</p>
 
-      <p>"Front-end developer and avid reader."</p>
+      <p class="second-p">"Front-end developer and avid reader."</p>
 
       <ul>
         <li>GitHub</li>
