Added the social links and styled it

--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -24,11 +24,22 @@
       <p class="second-p">"Front-end developer and avid reader."</p>
 
       <ul>
-        <li>GitHub</li>
-        <li>Frontend Mentor</li>
-        <li>LinkedIn</li>
-        <li>Twitter</li>
-        <li>Instagram</li>
+        <li><a href="https://github.com/dev-dimma">GitHub</a></li>
+        <li>
+          <a href="https://www.frontendmentor.io/home">Frontend Mentor</a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/dimma-joel-technology-front-end-developer-technical-writer/"
+            >LinkedIn</a
+          >
+        </li>
+        <li><a href="https://x.com/devdimma">Twitter</a></li>
+        <li>
+          <a href="https://www.instagram.com/devdimma?igsh=MXE4eDQ1eDRzY2ZyZg=="
+            >Instagram</a
+          >
+        </li>
       </ul>
     </main>
 
@@ -42,7 +53,7 @@
         >. Coded by
         <a
           href="https://github.com/dev-dimma/frontend-mentor-challenges/tree/main/social-links-profile-main/social-links-profile-main"
-          >Dimma Joel</a
+          >Dev Dimma</a
         >.
       </p>
     </footer>
