--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -14,35 +14,48 @@
     <title>Frontend Mentor | FAQ accordion</title>
   </head>
   <body>
-    <!-- FAQs
+    <main>
+      <h2>FAQs</h2>
 
-  What is Frontend Mentor, and how will it help me?
+      <p>What is Frontend Mentor, and how will it help me?</p>
+      <p>
+        Frontend Mentor offers realistic coding challenges to help developers
+        improve their frontend coding skills with projects in HTML, CSS, and
+        JavaScript. It's suitable for all levels and ideal for portfolio
+        building.
+      </p>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+      <p>Is Frontend Mentor free?</p>
+      <p>
+        Yes, Frontend Mentor offers both free and premium coding challenges,
+        with the free option providing access to a range of projects suitable
+        for all skill levels.
+      </p>
 
-  Is Frontend Mentor free?
+      <p>Can I use Frontend Mentor projects in my portfolio?</p>
+      <p>
+        Yes, you can use projects completed on Frontend Mentor in your
+        portfolio. It's an excellent way to showcase your skills to potential
+        employers!
+      </p>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+      <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
+      <p>
+        The best place to get help is inside Frontend Mentor's Discord
+        community. There's a help channel where you can ask questions and seek
+        support from other community members.
+      </p>
+    </main>
 
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-   -->
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/faq-accordion-wyfFdeBwBz"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="devdimma.netlify.app">Dimma Joel</a>.
+      </div>
+    </footer>
   </body>
 </html>
